# sporcli

./: Cargo.toml  README.md
src/: app_state.rs  main.rs  storage.rs
src/events/: message.rs
src/spotify/: auth_handler.rs  client.rs  mod.rs
src/worker/: mod.rs  spotify_worker.rs  ui.rs
