[package]
name = "sporcli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
serde_json = "1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
arboard = "3.6.1"
urlencoding = "2.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
indexmap = "2"